[gd_scene load_steps=3 format=3 uid="uid://dl1byu8hqw4mw"]

[ext_resource type="Script" path="res://ui/scene_management.gd" id="1_60pnd"]
[ext_resource type="PackedScene" uid="uid://dyredcifjul3y" path="res://ui/screen_wipe.tscn" id="23_c0tyl"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -240.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60pnd")

[node name="ScreenWipe" parent="." instance=ExtResource("23_c0tyl")]
z_index = 100

[connection signal="scene_hidden" from="ScreenWipe" to="." method="_on_screen_wipe_scene_hidden"]
[connection signal="scene_showing" from="ScreenWipe" to="." method="_on_screen_wipe_scene_showing"]
